z-index fix

--- a/src/less/messages.less
+++ b/src/less/messages.less
@@ -17,6 +17,7 @@
   position: relative;
   vertical-align: middle;
   word-wrap: break-word;
+  z-index: 1;
 
   &:empty {
     display: none;
