--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -388,7 +388,7 @@
 @msg-border-radius:           1.125em; // 18px
 @msg-line-height:             inherit;
 @msg-margin:                  @whitespace-base;
-@msg-padding:                 @whitespace-base;
+@msg-padding:                 (@whitespace-base * .85) @whitespace-base;
 @msg-default-bg:              darken(@color-gray-lightest, 2%);
 @msg-primary-bg:              @color-primary-rich;
 @msg-note-bg:                 #f6f2bc;
